--- a/SampleAppWithDapper/Views/Contact/Create.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Create.cshtml
@@ -12,7 +12,7 @@
 </style>
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        @*<p class="tagline">The one and only solution for any kind contact management. </p>*@
+        <p class="tagline">@Resource.Resource.CreateContact_Tagline </p>
     </div>
 </header>
 <div class="container">
@@ -21,7 +21,7 @@
             <section id="createContactForm">
                 @using (Html.BeginForm("Create", "Contact", new { ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    @*@Html.AntiForgeryToken()*@
+                    @Html.AntiForgeryToken()
 
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -55,13 +55,20 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-primary btnSubmit" /> 
-                            <input type='button' class="btn btn-primary " style="float: right" value='BACK' onclick='window.location = "@Url.Action("Index", "Contact")";' />
+
+                            <button type="submit" class="btn btn-outline-primary btn-sm btnSubmit" aria-label="Left Align">
+                                <i class="fa fa-trash-o fa-lg"></i> @Resource.Resource.CreateContact_Delete_Button
+                            </button>
+
+                            <button type="button" class="btn btn-outline-danger btn-sm btnDelete" aria-label="Right Align" onclick='window.location = "@Url.Action("Index", "Contact")";'>
+                                <i class="fa fa-arrow-left fa-lg"></i> @Resource.Resource.CreateContact_Back_Button
+                            </button>
+
                         </div>
                     </div>
                 }
             </section>
         </div>
-       
+
     </div>
 </div>
