--- a/SampleAppWithDapper/Views/Contact/Edit.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Edit.cshtml
@@ -10,11 +10,17 @@
     .btnSubmit {
     }
 
-    .btnEdit { }
+    .btnEdit {
+    }
+
+    .btnDelete {
+    }
+
+    .btnBack { }
 </style>
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        @*<p class="tagline">The one and only solution for any kind contact management. </p>*@
+        <p class="tagline">@Resource.Resource.EditContact_Tagline </p>
     </div>
 </header>
 <div class="container">
@@ -23,7 +29,9 @@
             <section id="createContactForm">
                 @using (Html.BeginForm("Edit", "Contact", new { ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    @*@Html.AntiForgeryToken()*@
+                    @Html.HiddenFor(m => m.Id)
+
+                    @Html.AntiForgeryToken()
 
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -57,8 +65,19 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Update Contact" class="btn btn-success btn-sm btnEdit" />
-                            <input type='button' class="btn btn-primary " style="float: right" value='BACK' onclick='window.location = "@Url.Action("Index", "Contact")";' />
+
+                            <button type="submit" class="btn btn-outline-warning btn-sm btnEdit" aria-label="Left Align">
+                                <i class="fa fa-edit fa-lg"></i> @Resource.Resource.EditContact_Edit_Button
+                            </button>
+
+                            <button type="button" class="btn btn-outline-danger btn-sm btnDelete" aria-label="Right Align" style="">
+                                <i class="fa fa-trash-o fa-lg"></i> @Resource.Resource.EditContact_Delete_Button
+                            </button>
+
+                            <button type="button" class="btn btn-outline-dark btn-sm btnBack" aria-label="Right Align" onclick='window.location = "@Url.Action("Index", "Contact")";' style="float:right">
+                                <i class="fa fa-arrow-left fa-lg"></i> @Resource.Resource.EditContact_Back_Button
+                            </button>
+
                         </div>
                     </div>
                 }
