--- a/SampleAppWithDapper/Views/Home/Index.cshtml
+++ b/SampleAppWithDapper/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <header class="bg-gradient" id="home">
     <div class="container mt-5">
-        <h1>Your contacts, neatly organized</h1>
-        <p class="tagline">The one and only solution for any kind contact management. </p>
+        <h1>@Resource.Resource.LandingPage_Short_Description </h1>
+        <p class="tagline">@Resource.Resource.LandingPage_Tagline </p>
     </div>
     <div class="img-holder mt-3"><img src="../../Content/images/graphic.png" alt="phone" class="img-fluid"></div>
 </header>
