--- a/SampleAppWithDapper/Views/Shared/_Layout.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contacts Deluxe</title>
+    <title>@Resource.Resource.APP_Main_Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -88,6 +88,18 @@
             float: right !important;
         }
     </style>
+    <script type = 'text/javascript' >
+        var appInsights=window.appInsights||function(config)
+        {
+            function r(config){ t[config] = function(){ var i = arguments; t.queue.push(function(){ t[config].apply(t, i)})} }
+            var t = { config:config},u=document,e=window,o='script',s=u.createElement(o),i,f;for(s.src=config.url||'//az416426.vo.msecnd.net/scripts/a/ai.0.js',u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=['Event','Exception','Metric','PageView','Trace','Ajax'];i.length;)r('track'+i.pop());return r('setAuthenticatedUserContext'),r('clearAuthenticatedUserContext'),config.disableExceptionTracking||(i='onerror',r('_'+i),f=e[i],e[i]=function(config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t['_' + i](config, r, u, e, o),s}),t
+        }({
+            instrumentationKey:'f501e8de-6d80-48b8-9950-8643297129de'
+        });
+        
+        window.appInsights=appInsights;
+        appInsights.trackPageView();
+    </script>
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
@@ -98,14 +110,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="@Url.Action("Index", "Home")">Contacts</a>
+                        <a class="navbar-brand" href="@Url.Action("Index", "Home")">@Resource.Resource.APP_NAME</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="@Url.Action("Index", "Home")">HOME <span class="sr-only">(current)</span></a> </li>
-                                <li class="nav-item"> <a class="nav-link active" href="@Url.Action("Index", "Contact")">CONTACTS <span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link active" href="@Url.Action("Index", "Home")">@Resource.Resource.Layout_Home_Navbar <span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index", "Contact")">@Resource.Resource.Layout_Contact_Navbar <span class="sr-only"></span></a> </li>
                                 @Html.Partial("_LoginPartial")
 
                             </ul>
@@ -145,41 +157,44 @@
     <script src="~/Content/js/script.js"></script>
     <link href="~/lib/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" />
 
+    <script src="~/lib/moment.js/moment.min.js"></script>
 
-    <script src="~/lib/moment.js/moment.js"></script>
-    <script src="~/lib/moment.js/moment-with-locales.js"></script>
+    <script src="~/lib/moment.js/moment-with-locales.min.js"></script>
     <script src="~/lib/moment.js/locale/hr.js"></script>
     <script src="~/lib/moment.js/locale/es-us.js"></script>
-    @*<link href="~/lib/datatables/css/dataTables.bootstrap.css" rel="stylesheet" />*@
+
     <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    @*<link href="~/lib/datatables/css/jquery.dataTables.css" rel="stylesheet" />
-        <link href="~/lib/datatables/css/jquery.dataTables.min.css" rel="stylesheet" />*@
-    @*<link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css" rel="stylesheet" />*@
-    <link href="https://cdn.datatables.net/select/1.2.7/css/select.bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
+
+
     <script src="~/lib/datatables/js/jquery.dataTables.js"></script>
-    @*<script src="~/lib/datatables/js/dataTables.bootstrap.js"></script>*@
+
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/lib/modernizr/modernizr.js"></script>
-    @*<link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />*@
+
     <script src="~/lib/bootstrap-sweetalert/sweetalert.js"></script>
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    @*<link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/lib/twitter-bootstrap/css/bootstrap-theme.css" rel="stylesheet" />*@
-    <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
-    <script src="~/lib/font-awesome/js/fontawesome.js"></script>
-    <script src="~/lib/font-awesome/js/all.js"></script>
+
+
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/svg-with-js.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.datatables.net/select/1.2.7/css/select.bootstrap.min.css" rel="stylesheet" />
+    @*<link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />*@
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/colreorder/1.5.0/js/dataTables.colReorder.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    @*<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>*@
+
+
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
+
     <!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
     @*<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>*@
-    <script src="~/lib/toastr.js/toastr.min.js"></script>
+
     <!-- Custom Js -->
     <!-- Application specific stuff -->
     @*<script src="~/Scripts/CommonCRUDScripts/commonCreate.js"></script>
@@ -187,12 +202,12 @@
         <script src="~/Scripts/CommonCRUDScripts/commonDetails.js"></script>
         <script src="~/Scripts/CommonCRUDScripts/commonEdit.js"></script>*@
     <script>
-                                                                                                // SWAL message styling
-                                                                            //swal.setDefaults({
-                                                                            //    buttonsStyling: false,
-                                                                            //    confirmButtonClass: 'btn btn-success w-25 mr-05',
-                                                                            //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
-                                                                            //});
+    // SWAL message styling
+    //swal.setDefaults({
+    //    buttonsStyling: false,
+    //    confirmButtonClass: 'btn btn-success w-25 mr-05',
+    //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
+    //});
     </script>
 
 </body>
