--- a/SampleAppWithDapper/Views/Shared/_LoginPartial.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,8 @@
 }
 else
 {
-    <li class="nav-item"> <a id="registerLink" class="nav-link active" href="@Url.Action("Register", "Account")">REGISTER <span class="sr-only">(current)</span></a> </li>
+    <li class="nav-item"> <a id="registerLink" class="nav-link" href="@Url.Action("Register", "Account")">@Resource.Resource.Layout_Register_Navbar <span class="sr-only"></span></a> </li>
     @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
     @*<li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
-    <li class="nav-item"> <a id="registerLink" class="nav-link active" href="@Url.Action("Login", "Account")">LOGIN <span class="sr-only">(current)</span></a> </li>
+    <li class="nav-item"> <a id="registerLink" class="nav-link" href="@Url.Action("Login", "Account")">@Resource.Resource.Layout_Login_Navbar <span class="sr-only"></span></a> </li>
 }
