Too many changes to neatly document.
Too many changes to neatly document.

--- a/SampleAppWithDapper/Views/Contact/ContactCreationConfirmed.cshtml
+++ b/SampleAppWithDapper/Views/Contact/ContactCreationConfirmed.cshtml
@@ -22,7 +22,7 @@
                     </td>
                     <td style="width: 60%">
                         <hr />
-                        <span>Contact created. </span>
+                        <span>@Resource.ContactCreation_Created_Success </span>
                         <hr />
 
                     </td>
