--- a/SampleAppWithDapper/Views/Contact/Create.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Create.cshtml
@@ -12,7 +12,7 @@
 </style>
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        <p class="tagline">@Resource.Resource.CreateContact_Tagline </p>
+        <p class="tagline">@Resource.CreateContact_Tagline </p>
     </div>
 </header>
 <div class="container">
@@ -57,11 +57,11 @@
                         <div class="col-md-offset-2 col-md-10">
 
                             <button type="submit" class="btn btn-outline-primary btn-sm btnSubmit" aria-label="Left Align">
-                                <i class="fa fa-trash-o fa-lg"></i> @Resource.Resource.CreateContact_Delete_Button
+                                <i class="fa fa-save fa-lg"></i> @Resource.CreateContact_Save_Button
                             </button>
 
-                            <button type="button" class="btn btn-outline-danger btn-sm btnDelete" aria-label="Right Align" onclick='window.location = "@Url.Action("Index", "Contact")";'>
-                                <i class="fa fa-arrow-left fa-lg"></i> @Resource.Resource.CreateContact_Back_Button
+                            <button type="button" class="btn btn-outline-danger btn-sm btnBack" aria-label="Right Align" onclick='window.location = "@Url.Action("Index", "Contact")";'>
+                                <i class="fa fa-arrow-left fa-lg"></i> @Resource.CreateContact_Back_Button
                             </button>
 
                         </div>
@@ -72,3 +72,6 @@
 
     </div>
 </div>
+<script>
+
+</script>
