--- a/SampleAppWithDapper/Views/Contact/ContactDeleted.cshtml
+++ b/SampleAppWithDapper/Views/Contact/ContactDeleted.cshtml
@@ -1,13 +1,13 @@
-﻿@model SampleAppWithDapper.Models.ContactCreateExceptionMessage
+﻿@model SampleAppWithDapper.DataAccess.Repositories.Contact.ContactDeleteResponse
 
 @{
-    ViewBag.Title = "Contact creation Fail";
+    ViewBag.Title = "Contact deleted";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        @*<p class="tagline">The one and only solution for any kind contact management. </p>*@
+      
     </div>
 </header>
 <div class="container" style="background-color: whitesmoke; padding: 6px">
@@ -17,15 +17,14 @@
                 <tr>
                     <td style="width: 40%">
                         <div class="col-md-12">
-                            <img class="img-fluid" src="~/Content/images/exception.jpg" alt="exception">
+                            <img class="img-fluid" src="~/Content/images/ok.png" alt="ok">
                         </div>
                     </td>
                     <td style="width: 60%">
                         <hr />
-                        <span><b>A problem has occured. </b></span>
+                        <span>@Resource.ContactDeleted_Success </span>
                         <hr />
-                        <span>Exception: @Model.Message </span>
-                        <hr />
+
                     </td>
                 </tr>
                 <tr>
