--- a/SampleAppWithDapper/Views/Contact/Index.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model SampleAppWithDapper.DataAccess.Repositories.Contact.ContactViewModel
+﻿
+@model SampleAppWithDapper.Models.Contacts.ContactViewModel
 
 @{
-    ViewBag.Title = Resource.Resource.APP_NAME;
+    ViewBag.Title = Resource.APP_NAME;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style type="text/css">
@@ -21,7 +22,7 @@
 </script>
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        <p class="tagline">@Resource.Resource.Contacts_Index_Tagline </p>
+        <p class="tagline">@Resource.Contacts_Index_Tagline </p>
     </div>
 </header>
 
@@ -34,14 +35,14 @@
                 <tbody>
                     <tr style="padding-top: 1px">
                         <td style="width: 45%;">
-                            <input type='button' class="btn btn-primary contactsDashboard_contactsDatatable_create createNewDialog" value='@Resource.Resource.Contacts_Index_CreateNewRecord' onclick='window.location = "@Url.Action("Create", "Contact")";' />
+                            <input type='button' class="btn btn-primary contactsDashboard_contactsDatatable_create createNewDialog" value='@Resource.Contacts_Index_CreateNewRecord' onclick='window.location = "@Url.Action("Create", "Contact")";' />
                         </td>
 
                         <td style="width: 75%" ;>
                             <!-- Search by text -->
                             <div class="" style="width: 83%; float: left; padding-top:1px">
 
-                                @Html.TextBox("searchStringContactsMainGrid", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = Resource.Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @value = ViewBag.CurrentFilter, @data_toggle = "tooltip", @data_placement = "top", @title = "", @data_original_title = Resource.Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @style = "float: left; padding-left: 0px; padding-right: 0px; padding-top:0px" })
+                                @Html.TextBox("searchStringContactsMainGrid", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @value = ViewBag.CurrentFilter, @data_toggle = "tooltip", @data_placement = "top", @title = "", @data_original_title = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @style = "float: left; padding-left: 0px; padding-right: 0px; padding-top:0px" })
                                 @Html.ValidationMessage("SearchStringContactsMainGrid")
 
                             </div>
@@ -63,14 +64,14 @@
         <table id="ContactsDashboard_ContactsDatatable" style="width: 100%" class="display table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>@Resource.Resource.Contacts_Grid_Id</th>
-                    <th>@Resource.Resource.Contacts_Grid_FirstName</th>
-                    <th>@Resource.Resource.Contacts_Grid_SecondName</th>
-                    <th>@Resource.Resource.Contacts_Grid_Telephone</th>
-                    <th>@Resource.Resource.Contacts_Grid_Email</th>
-                    <th>@Resource.Resource.Contacts_Grid_Created</th>
+                    <th>@Resource.Contacts_Grid_Id</th>
+                    <th>@Resource.Contacts_Grid_FirstName</th>
+                    <th>@Resource.Contacts_Grid_SecondName</th>
+                    <th>@Resource.Contacts_Grid_Telephone</th>
+                    <th>@Resource.Contacts_Grid_Email</th>
+                    <th>@Resource.Contacts_Grid_Created</th>
                     @*<th>CreatedBy</th>*@
-                    <th>@Resource.Resource.Contacts_Grid_Modified</th>
+                    <th>@Resource.Contacts_Grid_Modified</th>
                     @*<th>ModifiedBy</th>*@
                 </tr>
             </thead>
