--- a/SampleAppWithDapper/Views/Shared/_Layout.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>@Resource.Resource.APP_Main_Title</title>
+    <title>@Resource.APP_Main_Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -110,14 +110,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="@Url.Action("Index", "Home")">@Resource.Resource.APP_NAME</a>
+                        <a class="navbar-brand" href="@Url.Action("Index", "Home")">@Resource.APP_NAME</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="@Url.Action("Index", "Home")">@Resource.Resource.Layout_Home_Navbar <span class="sr-only">(current)</span></a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index", "Contact")">@Resource.Resource.Layout_Contact_Navbar <span class="sr-only"></span></a> </li>
+                                <li class="nav-item"> <a class="nav-link active" href="@Url.Action("Index", "Home")">@Resource.Layout_Home_Navbar <span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index", "Contact")">@Resource.Layout_Contact_Navbar <span class="sr-only"></span></a> </li>
                                 @Html.Partial("_LoginPartial")
 
                             </ul>
