--- a/SampleAppWithDapper/Views/Shared/_Layout.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_Layout.cshtml
@@ -155,10 +155,9 @@
     <script src="~/Content/js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="~/Content/js/script.js"></script>
-    <link href="~/lib/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" />
+    @*<link href="~/lib/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" />*@
 
-    <script src="~/lib/moment.js/moment.min.js"></script>
-
+    @*<script src="~/lib/moment.js/moment.min.js"></script>*@
     <script src="~/lib/moment.js/moment-with-locales.min.js"></script>
     <script src="~/lib/moment.js/locale/hr.js"></script>
     <script src="~/lib/moment.js/locale/es-us.js"></script>
@@ -171,7 +170,7 @@
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/lib/modernizr/modernizr.js"></script>
 
-    <script src="~/lib/bootstrap-sweetalert/sweetalert.js"></script>
+    @*<script src="~/lib/bootstrap-sweetalert/sweetalert.js"></script>*@
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
@@ -181,14 +180,7 @@
     <link href="~/lib/font-awesome/css/svg-with-js.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
 
-    <link href="https://cdn.datatables.net/select/1.2.7/css/select.bootstrap.min.css" rel="stylesheet" />
-    @*<link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />*@
-    <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/colreorder/1.5.0/js/dataTables.colReorder.min.js"></script>
-    @*<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>*@
-
+  
 
     <script src="~/lib/toastr.js/toastr.min.js"></script>
 
@@ -201,14 +193,14 @@
         <script src="~/Scripts/CommonCRUDScripts/commonDelete.js"></script>
         <script src="~/Scripts/CommonCRUDScripts/commonDetails.js"></script>
         <script src="~/Scripts/CommonCRUDScripts/commonEdit.js"></script>*@
-    <script>
+    //<script>
     // SWAL message styling
     //swal.setDefaults({
     //    buttonsStyling: false,
     //    confirmButtonClass: 'btn btn-success w-25 mr-05',
     //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
     //});
-    </script>
+    //</script>
 
 </body>
 </html>
