--- a/SampleAppWithDapper/Views/Contact/Index.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Index.cshtml
@@ -101,7 +101,13 @@
     <!-- #END# Contacts Datatable card -->
     <!-- ============================== -->
 </div>
-<script src="~/Scripts/Contacts/ContactsDatatableWireup.js"></script>
+<link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+
+
+<script src="~/lib/datatables/js/jquery.dataTables.js"></script>
+
+<script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+
 <link href="https://cdn.datatables.net/select/1.2.7/css/select.bootstrap.min.css" rel="stylesheet" />
 @*<link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />*@
 <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
@@ -111,8 +117,9 @@
 
 <script src="~/lib/pdfmake/pdfmake.min.js"></script>
 <script src="~/lib/pdfmake/vfs_fonts.js"></script>
+<script src="~/Scripts/Contacts/ContactsDatatableWireup.js"></script>
 <script>
-    
+
     // remove active class from all navlinks
     // add active class to contacts navlink
 </script>
