--- a/SampleAppWithDapper/Views/Shared/_Layout.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_Layout.cshtml
@@ -161,12 +161,7 @@
     <script src="~/lib/moment.js/locale/hr.js"></script>
     <script src="~/lib/moment.js/locale/es-us.js"></script>
 
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 
-
-    <script src="~/lib/datatables/js/jquery.dataTables.js"></script>
-
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/lib/modernizr/modernizr.js"></script>
 
     @*<script src="~/lib/bootstrap-sweetalert/sweetalert.js"></script>*@
@@ -179,7 +174,7 @@
     <link href="~/lib/font-awesome/css/svg-with-js.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
 
-  
+
 
     <script src="~/lib/toastr.js/toastr.min.js"></script>
 
@@ -192,14 +187,14 @@
         <script src="~/Scripts/CommonCRUDScripts/commonDelete.js"></script>
         <script src="~/Scripts/CommonCRUDScripts/commonDetails.js"></script>
         <script src="~/Scripts/CommonCRUDScripts/commonEdit.js"></script>*@
-    //<script>
-    // SWAL message styling
-    //swal.setDefaults({
-    //    buttonsStyling: false,
-    //    confirmButtonClass: 'btn btn-success w-25 mr-05',
-    //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
-    //});
-    //</script>
+    @*<script>
+            // SWAL message styling
+            //swal.setDefaults({
+            //    buttonsStyling: false,
+            //    confirmButtonClass: 'btn btn-success w-25 mr-05',
+            //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
+            //});
+        </script>*@
 
 </body>
 </html>
