Minor fix to the back button.
Minor fix to the back button.

--- a/SampleAppWithDapper/Views/Contact/Edit.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Edit.cshtml
@@ -99,7 +99,7 @@
                                 <i class="fa fa-trash-o fa-lg"></i> @Resource.EditContact_Delete_Button
                             </button>
 
-                            <button type="button" class="btn btn-outline-dark btn-sm btnBack" aria-label="Right Align" style="float:right">
+                            <button type="button" class="btn btn-outline-dark btn-sm btnBack" aria-label="Right Align" style="float:right" onclick='window.location = "@Url.Action("Index", "Contact")";'>
                                 <i class="fa fa-arrow-left fa-lg"></i> @Resource.EditContact_Back_Button
                             </button>
 
