--- a/SampleAppWithDapper/Views/Contact/Index.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Index.cshtml
@@ -34,15 +34,15 @@
                 <thead></thead>
                 <tbody>
                     <tr style="padding-top: 1px">
-                        <td style="width: 45%;">
+                        <td style="width: 30%;">
                             <input type='button' class="btn btn-primary contactsDashboard_contactsDatatable_create createNewDialog" value='@Resource.Contacts_Index_CreateNewRecord' onclick='window.location = "@Url.Action("Create", "Contact")";' />
                         </td>
 
                         <td style="width: 75%" ;>
                             <!-- Search by text -->
-                            <div class="" style="width: 83%; float: left; padding-top:1px">
+                            <div class="" style="width: 70%; float: left; padding-top:1px">
 
-                                @Html.TextBox("searchStringContactsMainGrid", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @value = ViewBag.CurrentFilter, @data_toggle = "tooltip", @data_placement = "top", @title = "", @data_original_title = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @style = "float: left; padding-left: 0px; padding-right: 0px; padding-top:0px" })
+                                @Html.TextBox("searchStringContactsMainGrid", ViewBag.CurrentFilter as string, new { @class = "form-control", @placeholder = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @value = ViewBag.CurrentFilter, @data_toggle = "tooltip", @data_placement = "top", @title = "", @data_original_title = Resource.Contacts_Index_EnterSearchCriteria_Placeholder, @style = "float: left; " })
                                 @Html.ValidationMessage("SearchStringContactsMainGrid")
 
                             </div>
@@ -114,6 +114,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
 <script src="https://cdn.datatables.net/colreorder/1.5.0/js/dataTables.colReorder.min.js"></script>
+
+<script src="~/Content/js/dataTables.responsive.min.js"></script>
+<script src="~/Content/js/responsive.bootstrap.min.js"></script>
+<link href="~/Content/css/responsive.dataTables.min.css" rel="stylesheet" />
 
 <script src="~/lib/pdfmake/pdfmake.min.js"></script>
 <script src="~/lib/pdfmake/vfs_fonts.js"></script>
