Minor tweaks to css.
Minor tweaks to css.

--- a/SampleAppWithDapper/Views/Contact/Index.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Index.cshtml
@@ -47,7 +47,7 @@
 
                             </div>
 
-                            <button class="btn btn-outline-primary btn-sm" id="submitSearchContactsMainGrid" style="float: right; margin: 1px; margin-bottom: 0px; margin-top: 0px" type="submit" name="submitSearchContactsMainGrid" data-toggle="tooltip" data-placement="right" title="" data-original-title="Begin search">
+                            <button class="btn btn-outline-primary btn-sm" id="submitSearchContactsMainGrid" style="margin: 1px; margin-bottom: 0px; margin-top: 0px" type="submit" name="submitSearchContactsMainGrid" data-toggle="tooltip" data-placement="right" title="" data-original-title="Begin search">
                                 <i class="fas fa-search fa-sm"></i>
                             </button>
 
