--- a/SampleAppWithDapper/Content/css/style.css
+++ b/SampleAppWithDapper/Content/css/style.css
@@ -109,15 +109,15 @@ p {
 }
 
 .btn-primary {
-    border-radius: 3px;
-    background-image: -moz-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: -webkit-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: -ms-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);
-    font-weight: 500;
-    padding: 0.6rem 2rem;
-    border: 0;
+    border-radius: 3px !important;
+    background-image: -moz-linear-gradient( 122deg, #e54595 0%, #fd378e 100%) !important;
+    background-image: -webkit-linear-gradient( 122deg, #e54595 0%, #fd378e 100%) !important;
+    background-image: -ms-linear-gradient( 122deg, #e54595 0%, #fd378e 100%) !important;
+    background-image: linear-gradient( 122deg, #e54595 0%, #fd378e 100%) !important;
+    box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2) !important;
+    font-weight: 500 !important;
+    padding: 0.6rem 2rem !important;
+    border: 0 !important;
 }
 
     .btn-primary:hover,
