--- a/SampleAppWithDapper/Views/Contact/Index.cshtml
+++ b/SampleAppWithDapper/Views/Contact/Index.cshtml
@@ -47,7 +47,7 @@
 
                             </div>
 
-                            <button class="btn btn-outline-primary btn-sm" id="submitSearchContactsMainGrid" style="margin: 1px; margin-bottom: 0px; margin-top: 0px" type="submit" name="submitSearchContactsMainGrid" data-toggle="tooltip" data-placement="right" title="" data-original-title="Begin search">
+                            <button class="btn btn-primary btn-sm" id="submitSearchContactsMainGrid" style="margin: 1px; margin-bottom: 0px; margin-top: 0px" type="submit" name="submitSearchContactsMainGrid" data-toggle="tooltip" data-placement="right" title="" data-original-title="Begin search">
                                 <i class="fas fa-search fa-sm"></i>
                             </button>
 
@@ -107,18 +107,19 @@
 <script src="~/lib/datatables/js/jquery.dataTables.js"></script>
 
 <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-
-<link href="https://cdn.datatables.net/select/1.2.7/css/select.bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script>
+<link href="https://cdn.datatables.net/select/1.3.0/css/select.bootstrap4.min.css" rel="stylesheet" />
 @*<link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />*@
 <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
+<link href="https://cdn.datatables.net/colreorder/1.5.0/css/colReorder.bootstrap4.min.css" rel="stylesheet" />
 <script src="https://cdn.datatables.net/colreorder/1.5.0/js/dataTables.colReorder.min.js"></script>
-
+<link href="https://cdn.datatables.net/select/1.3.0/css/select.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Content/js/dataTables.responsive.min.js"></script>
 <script src="~/Content/js/responsive.bootstrap.min.js"></script>
-<link href="~/Content/css/responsive.dataTables.min.css" rel="stylesheet" />
-
+@*<link href="~/Content/css/responsive.dataTables.min.css" rel="stylesheet" />*@
+<link href="https://cdn.datatables.net/responsive/2.2.2/css/responsive.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/lib/pdfmake/pdfmake.min.js"></script>
 <script src="~/lib/pdfmake/vfs_fonts.js"></script>
 <script src="~/Scripts/Contacts/ContactsDatatableWireup.js"></script>
