--- a/SampleAppWithDapper/Views/Shared/_Layout.cshtml
+++ b/SampleAppWithDapper/Views/Shared/_Layout.cshtml
@@ -28,11 +28,18 @@
     <!-- Main css -->
     <link href="~/Content/css/style.css" rel="stylesheet" />
 
-    <link href="~/lib/toastr.js/toastr.min.css" rel="stylesheet" />
     <!-- jQuery and Bootstrap -->
-    @*<script src="~/lib/jquery/jquery.min.js"></script>*@
     <script src="~/Content/js/jquery-3.2.1.min.js"></script>
     <script src="~/Content/js/bootstrap.bundle.min.js"></script>
+
+    <!-- font-awesome -->
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet" />
+
+    <!-- toastr -->
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
+    <link href="~/lib/toastr.js/toastr.min.css" rel="stylesheet" />
+
     <style>
         .dataTables_processing {
             z-index: 11000 !important;
@@ -103,7 +110,6 @@
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
     <!-- Nav Menu -->
-
     <div class="nav-menu fixed-top">
         <div class="container">
             <div class="row">
@@ -149,51 +155,34 @@
     </div>
 
 
-
     <!-- Plugins JS -->
     <script src="~/Content/js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="~/Content/js/script.js"></script>
+
+
     @*<link href="~/lib/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" />*@
 
     @*<script src="~/lib/moment.js/moment.min.js"></script>*@
     <script src="~/lib/moment.js/moment-with-locales.min.js"></script>
-    <script src="~/lib/moment.js/locale/hr.js"></script>
-    <script src="~/lib/moment.js/locale/es-us.js"></script>
+    @*<script src="~/lib/moment.js/locale/hr.js"></script>
+        <script src="~/lib/moment.js/locale/es-us.js"></script>*@
 
-
-    <script src="~/lib/modernizr/modernizr.js"></script>
+    @*<script src="~/lib/modernizr/modernizr.js"></script>*@
 
     @*<script src="~/lib/bootstrap-sweetalert/sweetalert.js"></script>*@
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
-
-    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/svg-with-js.min.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
-
-
-    <script src="~/lib/toastr.js/toastr.min.js"></script>
+    @*<link href="~/lib/font-awesome/css/svg-with-js.min.css" rel="stylesheet" />
+        <link href="~/lib/font-awesome/css/v4-shims.min.css" rel="stylesheet" />*@
 
     <!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
     @*<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>*@
 
     <!-- Custom Js -->
     <!-- Application specific stuff -->
-    @*<script src="~/Scripts/CommonCRUDScripts/commonCreate.js"></script>
-        <script src="~/Scripts/CommonCRUDScripts/commonDelete.js"></script>
-        <script src="~/Scripts/CommonCRUDScripts/commonDetails.js"></script>
-        <script src="~/Scripts/CommonCRUDScripts/commonEdit.js"></script>*@
-    @*<script>
-            // SWAL message styling
-            //swal.setDefaults({
-            //    buttonsStyling: false,
-            //    confirmButtonClass: 'btn btn-success w-25 mr-05',
-            //    cancelButtonClass: 'btn btn-secondary w-25 ml-05'
-            //});
-        </script>*@
+
 
 </body>
 </html>
