--- a/SampleAppWithDapper/Views/Contact/ContactDeleted.cshtml
+++ b/SampleAppWithDapper/Views/Contact/ContactDeleted.cshtml
@@ -1,4 +1,4 @@
-﻿@model SampleAppWithDapper.DataAccess.Repositories.Contact.ContactDeleteResponse
+﻿@model SampleAppWithDapper.DataAccess.MessagePattern.ContactDeleteResponse
 
 @{
     ViewBag.Title = "Contact deleted";
