--- a/SampleAppWithDapper/Views/Contact/ContactCreationConfirmed.cshtml
+++ b/SampleAppWithDapper/Views/Contact/ContactCreationConfirmed.cshtml
@@ -1,4 +1,4 @@
-﻿@model SampleAppWithDapper.DataAccess.Repositories.Contact.ContactCreateResponse
+﻿@model SampleAppWithDapper.DataAccess.MessagePattern.ContactCreateResponse
 
 @{
     ViewBag.Title = "Contact created";
@@ -7,7 +7,7 @@
 
 <header class="bg-gradient" id="home">
     <div class="container mt-3">
-        @*<p class="tagline">The one and only solution for any kind contact management. </p>*@
+       
     </div>
 </header>
 <div class="container" style="background-color: whitesmoke; padding: 6px">
